fixing bug overflow tablet mobile

--- a/style.css
+++ b/style.css
@@ -225,6 +225,9 @@ body {
         font-size: 2rem;
         text-align: center;
     }
+    .sticky-top {
+        overflow: hidden;
+    }
 }
 
 
